test/semantic_errors/invalid_binaryop14.mc
void main() {
    int res;
    int a;
    char b;
    res = a + b; /* cannot sum int with char */
}